--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "date-fns": "^2.23.0",
     "gray-matter": "^4.0.3",
     "next": "^11.0.0",
+    "next-absolute-url": "^1.2.2",
+    "next-connect": "^0.10.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^13.0.0",
